Fix margins and spacing throughout the css

--- a/css/main.css
+++ b/css/main.css
@@ -22,8 +22,9 @@ article header p {
   font-family: "Crimson Text", serif;
   font-style: italic;
   color: #222;
-  font-size: 1.125rem;
+  font-size: 1rem;
   margin-top: -1.125em;
+  padding-bottom: .25rem;
 }
 
 article header {
@@ -34,36 +35,45 @@ article header {
 article p {
   font-family: "Crimson Text", serif;
   color: #222;
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 1.3;
+  margin-top: 1.3rem;
+  margin-right: -.3rem;
 }
 
 .quote {
   font-family: "Crimson Text", serif;
   color: #999;
   font-size: 1.125rem;
+  margin-left: -.3rem;
 }
 
 blockquote {
   font-family: "Crimson Text", serif;
   font-size: 1.125rem;
+  text-align: left;
+  padding-top: .1rem;
 }
 
 blockquote p {
   color: #555;
+  font-size: 1.125rem;
+  margin-right: 1rem;
 }
 
 body {
   font-family: "Crimson Text", serif;
   color: #222;
-  font-size: 1.125rem;
+  font-size: 1em;
   padding: 0 1em;
   margin: 0;
   line-height: 1.3;
 }
 
 article ol {
-  margin-left: -1.3rem;
+  margin-left: -1.5rem;
+  margin-top: 1.3rem;
+  font-size: 1rem;
 }
 
 article {
@@ -71,4 +81,7 @@ article {
   border-bottom: 2px solid #999;
   border-width: thin;
   font-size: 1.125rem;
+  padding-bottom: .3rem;
+  margin-bottom: 1.3rem;
+  margin-right: .2rem;
 }
